# micro-webservice

./: .gitignore  BUILD.md  CMakeLists.txt  NUTZUNGSHINWEISE.md  README.md  global.hpp  handlers.cpp  handlers.hpp  helper.cpp  helper.hpp  httpworker.cpp  httpworker.hpp  main.cpp  number_theory.hpp  router.cpp  router.hpp  server.cpp  server.hpp  uri.cpp  uri.hpp
src/: handlers.hpp  httpworker.cpp  main.cpp  number_theory.hpp
src/trip/: handler.hpp  response_request.hpp  router.hpp
trip/: handler.hpp  path.hpp  response_request.hpp  router.hpp  trip.hpp
